--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
+    "generate-password": "^1.7.0",
     "joi": "^17.7.0",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "mongoose-sequence": "^5.3.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "winston": "^3.8.2"
   },
   "devDependencies": {
